# universallife_agent

./: .env.example  .gitignore  README.md  REFACTORING_SUMMARY.md  pyproject.toml  reconstruction.md  requirements.txt  run.py  test.py
.claude/: settings.local.json
.claude/skills/api-service-builder/: SKILL.md
.claude/skills/memory-enabled-subgraph/: SKILL.md
.claude/skills/subgraph-scaffold/: SKILL.md
app/: main.py
app/api/: routes.py
app/core/: config.py  logging.py  models.py  prompts.py  state.py
app/graph/: main_graph.py  recovery.py  reviewer.py  router.py
app/memory/: __init__.py  compressor.py  embeddings.py  interfaces.py  judge.py  manager.py  milvus_store.py  models.py  redis_store.py
app/services/: academic_service.py  finance_service.py  llm_service.py  search_service.py  weather_service.py
app/subgraphs/: base.py
app/subgraphs/academic/: graph.py  nodes.py  prompts.py  state.py  tools.py
app/subgraphs/finance/: graph.py  nodes.py  prompts.py  state.py  tools.py
app/subgraphs/outfit/: graph.py  nodes.py  state.py
app/subgraphs/search/: graph.py  nodes.py  prompts.py  state.py  tools.py
app/subgraphs/trip/: graph.py  nodes.py  prompts.py  state.py  tools.py
app/tools/: adapters.py  base.py  mocks.py  registry.py
app/utils/: feedback.py  helpers.py
tests/: conftest.py  test_academic_flow.py  test_finance_flow.py  test_memory.py  test_outfit_flow.py  test_recovery.py  test_reviewer.py  test_router.py  test_search_flow.py  test_services.py  test_trip_flow.py
